--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,10 @@ jobs:
       - checkout
       - run:
         name: "Install dependencies"
-        command: pip install --user -r requirements.txt
+        command: |
+          python3 -m venv venv
+          . venv/bin/activate
+          pip install --user -r requirements.txt
       - run:
         name: "Run tests"
         command: |
