--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 jobs:
-  build:
+  run_test:
     docker:
       - image: circleci/python:3.7
     working_directory: ~/repo
@@ -18,3 +18,8 @@ jobs:
         command: |
             flake8 --exclude=venv* --statistics
             pytest -v --cov=calculator
+            
+workflows:
+  jobs:
+    build_test:
+      - run_test
