--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,7 @@ jobs:
       - checkout
       - run:
           name: "Install dependencies"
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install --user -r requirements.txt
+          command: pip install --user -r requirements.txt
       - run:
           name: "Run tests"
           command: |
