--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: |          
             . venv/bin/activate
             flake8 --exclude=venv* --statistics
-            flake8 ./ --max-line-length=100 --output-file test-reports
+            flake8 ./ test --output-file test-reports
             pytest -v --cov=calculator
       - store_artifacts:
           path: test-reports
