--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,12 @@ jobs:
       - checkout
       - run:
           name: "Install dependencies"
-          command: pip install --user -r requirements.txt
-      - run:
-          name: "Run tests"
           command: |          
             . venv/bin/activate
+            pip install --user -r requirements.txt
+      - run:
+          name: "Run tests"
+          command: |
             flake8 --exclude=venv* --statistics
             flake8 ./ test --output-file test-reports
             pytest -v --cov=calculator
