--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,8 @@ jobs:
       - checkout
       - run:
           name: "Install dependencies"
-          command: |          
+          command: |
+            python3 -m venv venv
             . venv/bin/activate
             pip install --user -r requirements.txt
       - run:
