--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
       - run:
           name: "Run tests"
           command: |
+            mkdir test-results
             flake8 --exclude=venv* --statistics --output-file test-reports
             pytest -v --cov=calculator
       - store_artifacts:
