--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           name: "Run tests"
           command: |
             mkdir test-results
-            flake8 --exclude=venv* --statistics test --output-file test-reports
+            flake8 ./ test --output-file test-reports
             pytest -v --cov=calculator
       - store_artifacts:
           path: test-reports
