--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: "Install Python Dependencies 1"
+          command: echo 'export PATH=~$PATH:~/.local/bin' >> $BASH_ENV && source $BASH_ENV
+      - run:
           name: "Install dependencies"
           command: pip install --user -r requirements.txt
       - run:
