--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,8 @@ jobs:
       - run:
           name: "Run tests"
           command: |
-            mkdir test-results
-            flake8 ./ tests --output-file test-reports.txt
             pytest -v --cov=calculator
+            flake8 ./ test --output-file test-reports
       - store_artifacts:
           path: test-reports
           destination: test-reports
