--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,18 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
-      - run:
-          name: "Install Python Dependencies 1"
-          command: echo 'export PATH=~$PATH:~/.local/bin' >> $BASH_ENV && source $BASH_ENV
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "requirements.txt" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
       - run:
           name: "Install dependencies"
           command: pip install --user -r requirements.txt
+      - save_cache:
+          paths:
+            - ./venv
+          key: v1-dependencies-{{ checksum "requirements.txt" }}
       - run:
           name: "Run tests"
           command: |
