--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,10 @@ jobs:
           - v1-dependencies-
       - run:
           name: "Install dependencies"
-          command: pip install --user -r requirements.txt
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install --user -r requirements.txt
       - save_cache:
           paths:
             - ./venv
@@ -23,7 +26,7 @@ jobs:
           command: |
             pytest -v --cov=calculator
             . venv/bin/activate
-            flake8 ./  --max-line-length=100 --output-file test-reports
+            flake8 ./  test --output-file test-reports
       - store_artifacts:
           path: test-reports
           destination: test-reports
