--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,10 @@ jobs:
           key: v1-dependencies-{{ checksum "requirements.txt" }}
       - run:
           name: "Run tests"
+          command: pytest -v --cov=calculator
+      - run:
+          name: "Run tests 2"
           command: |
-            pytest -v --cov=calculator
             . venv/bin/activate
             flake8 ./  test --output-file test-reports
       - store_artifacts:
