--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,7 @@ jobs:
           - v1-dependencies-
       - run:
           name: "Install dependencies"
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install --user -r requirements.txt
+          command: pip install --user -r requirements.txt
       - save_cache:
           paths:
             - ./venv
