--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           command: pytest -v --cov=calculator
       - run:
           name: "Run tests 2"
-          command: flake8 ./  test --output-file test-reports
+          command: flake8 --bug-report
       - store_artifacts:
           path: test-reports
           destination: test-reports
