--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - run:
           name: "Run tests 2"
           command: |
-            mkdir: test-reports
+            mkdir test-reports
             flake8 --output-file=test-reports/test-reports.txt
       - store_artifacts:
           path: test-reports
