--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,9 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
+      - run:
+          name: "Install Python Dependencies 1"
+          command: echo 'export PATH=~$PATH:~/.local/bin' >> $BASH_ENV && source $BASH_ENV
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "requirements.txt" }}
