--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,8 @@ jobs:
           name: "Run tests 2"
           command: |
             mkdir test-reports
-            flake8 --output-file=test-reports/test-reports.txt
+            pytest --junitxml=test-reports/junit.xml --html=test-reports/pytest_report.html --self-contained-html
+            flake8 --output-file=test-reports
       - store_artifacts:
           path: test-reports
           destination: test-reports
