--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,12 +23,12 @@ jobs:
           key: v1-dependencies-{{ checksum "requirements.txt" }}
       - run:
           name: "Run tests"
-          command: pytest -v --cov=calculator
+          command: |
+            mkdir test-reports
+            pytest -v --cov=calculator --junitxml=test-reports/junit.xml --html=test-reports/pytest_report.html --self-contained-html
       - run:
           name: "Run tests 2"
           command: |
-            mkdir test-reports
-            pytest --junitxml=test-reports/junit.xml --html=test-reports/pytest_report.html --self-contained-html
             flake8 --output-file=test-reports
       - store_artifacts:
           path: test-reports
