--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,8 @@ jobs:
           name: "Run tests"
           command: |
             mkdir test-reports
-            pytest -v --cov=calculator --junitxml=test-reports/junit.xml --html=test-reports/pytest_report.html --self-contained-html
+            pytest -v --cov=calculator 
+            pytest --junitxml=test-reports/junit.xml --html=test-reports/pytest_report.html --self-contained-html
       - run:
           name: "Run tests 2"
           command: |
