--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,17 +23,12 @@ jobs:
           key: v1-dependencies-{{ checksum "requirements.txt" }}
       - run:
           name: "Run tests"
-          command: |
-            . venv/bin/activate
-            flake8 --exclude=venv* --statistics
-            pytest -v --cov=calculator
+          command: pytest -v --cov=calculator
       - run:
           name: "Run tests 2"
           command: |
             mkdir test-reports
-            flake8 --output-file=test-reports
+            flake8 --output-file=test-reports/test-reports.txt
       - store_artifacts:
           path: test-reports
           destination: test-reports
-            
-
