--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           name: "Run tests"
           command: |
             pytest -v --cov=calculator
-            flake8 ./ test --output-file test-reports
+            flake8 --exclude=venv* --statistics
       - store_artifacts:
           path: test-reports
           destination: test-reports
