--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,25 +20,25 @@ jobs:
           key: v1-dependencies-{{ checksum "requirements.txt" }}
       - run:
           name: "Run Linter"
-          working_directory: ~/workspace/src
+          working_directory: ~/repo
           command: |
             mkdir -p test-reports/flake8
             flake8 . --output-file=test-reports/flake8/flake8.txt
       - run:
           name: "Run test"
-          working_directory: ~/workspace/src
+          working_directory: ~/repo
           command: coverage run test_calculator.py test
       - run:
           name: "Create Test Reports"
-          working_directory: ~/workspace/src
+          working_directory: ~/repo
           command: |
-            mkdir -p myapp/test-reports/flake8
+            mkdir -p test-reports/flake8
             flake8_junit test-reports/flake8/flake8.txt test-reports/flake8/flake8_junit.xml
             coverage html -d test-reports/coverage
           when: always
       - store_test_results:
-          path: myapp/test-reports
+          path: test-reports
       
       - store_artifacts:
-          path: myapp/test-reports
+          path: test-reports
           destination: tr1
