--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,12 @@ jobs:
             mkdir -p test-reports/flake8
             flake8 . --output-file=test-reports/flake8/flake8.txt
       - run:
-          name: "Run test"
+          name: "Run tests"
+          command: |
+            pytest -v --cov=calculator
+            flake8 --exclude=venv* --statistics
+      - run:
+          name: "Run test2"
           working_directory: ~/repo
           command: coverage run test_calculator.py test
       - run:
