--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
           working_directory: ~/repo
           command: |
             mkdir -p test-reports/flake8
+            . venv/bin/activate
             flake8 . --output-file=test-reports/flake8/flake8.txt
       - run:
           name: "Run tests"
