--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,8 @@ jobs:
           - v1-dependencies-
       - run:
           name: "Install dependencies"
+          python3 -m venv venv
+          . venv/bin/activate
           command: pip install --user -r requirements.txt
       - save_cache:
           paths:
