--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,7 @@ jobs:
           - v1-dependencies-
       - run:
           name: "Install dependencies"
-          python3 -m venv venv
-          command: pip install --user -r requirements.txt
+          command: sudo pip install --user -r requirements.txt
       - save_cache:
           paths:
             - ./venv
