--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,14 +25,14 @@ jobs:
             mkdir -p test-reports/flake8
             flake8 . --output-file=test-reports/flake8/flake8.txt
       - run:
-        name: Check for warnings.
-        command: |
-          if [ -f .flake8warnings ]; then
-            flake8 --append-config=.flake8warnings
-          else
-            flake8 --extend-ignore="$FLAKE8_ERRORS"
-          fi
-      when: always
+          name: "Check for warnings."
+          command: |
+            if [ -f .flake8warnings ]; then
+              flake8 --append-config=.flake8warnings
+            else
+              flake8 --extend-ignore="$FLAKE8_ERRORS"
+            fi
+          when: always
       - run:
           name: "Run tests"
           command: |
