--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,12 @@ jobs:
             mkdir -p test-reports/flake8
             flake8 . --output-file=test-reports/flake8/flake8.txt
       - run:
+          name: Code style check
+          command: |
+            . venv/bin/activate
+            flake8
+            black --check .
+      - run:
           name: "Check for warnings."
           command: |
             if [ -f .flake8warnings ]; then
