--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,11 @@ jobs:
           - v1-dependencies-
       - run:
           name: "Install dependencies"
-          command: pip install --user -r requirements.txt
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install --upgrade pip
+            pip install -r requirements.txt
       - save_cache:
           paths:
             - ./venv
