--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
           working_directory: ~/repo
           command: |
             mkdir -p test-reports/flake8
+            . venv/bin/activate
             flake8 . --output-file=test-reports/flake8/flake8.txt
       - run:
           name: Code style check
@@ -37,6 +38,7 @@ jobs:
       - run:
           name: "Check for warnings."
           command: |
+            . venv/bin/activate
             if [ -f .flake8warnings ]; then
               flake8 --append-config=.flake8warnings
             else
@@ -46,6 +48,7 @@ jobs:
       - run:
           name: Check for errors.
           command: |
+            . venv/bin/activate
             if [ -f .flake8errors ]; then
               flake8 --append-config=.flake8errors
             else
@@ -56,6 +59,7 @@ jobs:
       - run:
           name: "Run tests"
           command: |
+            . venv/bin/activate
             pytest -v --cov=calculator
             flake8 --exclude=venv* --statistics
             flake8 . --bug-report
@@ -69,6 +73,7 @@ jobs:
           name: "Create Test Reports"
           working_directory: ~/repo
           command: |
+            . venv/bin/activate
             flake8_junit test-reports/flake8/flake8.txt test-reports/flake8/flake8_junit.xml
             coverage html -d test-reports/coverage
           when: always
