--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,9 +13,7 @@ jobs:
           - v1-dependencies-
       - run:
           name: "Install dependencies"
-          command: |
-            pip install --upgrade pip
-            pip install --user -r requirements.txt
+          command: pip install --user -r requirements.txt
       - save_cache:
           paths:
             - ./venv
