--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,10 +54,12 @@ jobs:
             flake8 . --bug-report
             flake8 . --benchmark
             flake8 . --count
+          when: always
       - run:
           name: "Run test2"
           working_directory: ~/repo
           command: coverage run test_calculator.py test
+          when: always
       - run:
           name: "Create Test Reports"
           working_directory: ~/repo
