--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,9 +13,9 @@ jobs:
           - v1-dependencies-
       - run:
           name: "Install dependencies"
-          command: 
+          command: |
             python3 -m venv .venv
-            .venv/bin/activate
+            . .venv/bin/activate
             pip install -r requirements.txt
       - save_cache:
           paths:
