--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,8 @@ jobs:
           name: "Install dependencies"
           command: |
             python3 -m venv .venv
-            .venv/bin/activate
-            pip install -r requirements.txt
+            . .venv/bin/activate
+            sudo pip install --user -r requirements.txt
       - save_cache:
           paths:
             - ./venv
