--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           command: |
             python3 -m venv .venv
             . .venv/bin/activate
-            sudo pip install --user -r requirements.txt
+            sudo pip install -r requirements.txt
       - save_cache:
           paths:
             - ./venv
