--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,7 @@ jobs:
           - v1-dependencies-
       - run:
           name: "Install dependencies"
-          command: |
-            python3 -m venv .venv
-            . .venv/bin/activate
-            sudo pip install -r requirements.txt
+          command: pip install -r requirements.txt
       - save_cache:
           paths:
             - ./venv
@@ -26,12 +23,10 @@ jobs:
           working_directory: ~/repo
           command: |
             mkdir -p test-reports/flake8
-            . .venv/bin/activate
             flake8 . --output-file=test-reports/flake8/flake8.txt
       - run:
           name: "Check for warnings."
           command: |
-            . .venv/bin/activate
             if [ -f .flake8warnings ]; then
               flake8 --append-config=.flake8warnings
             else
@@ -41,7 +36,6 @@ jobs:
       - run:
           name: Check for errors.
           command: |
-            . .venv/bin/activate
             if [ -f .flake8errors ]; then
               flake8 --append-config=.flake8errors
             else
@@ -52,7 +46,6 @@ jobs:
       - run:
           name: "Run tests"
           command: |
-            . .venv/bin/activate
             pytest -v --cov=calculator
             flake8 --exclude=venv* --statistics
             flake8 . --bug-report
@@ -62,15 +55,12 @@ jobs:
       - run:
           name: "Run test2"
           working_directory: ~/repo
-          command: |
-            . .venv/bin/activate
-            coverage run test_calculator.py test
+          command: coverage run test_calculator.py test
           when: always
       - run:
           name: "Create Test Reports"
           working_directory: ~/repo
           command: |
-            . .venv/bin/activate
             flake8_junit test-reports/flake8/flake8.txt test-reports/flake8/flake8_junit.xml
             coverage html -d test-reports/coverage
           when: always
