--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           - v1-dependencies-
       - run:
           name: "Install dependencies"
-          command: pip install -r requirements.txt
+          command: pip install --user -r requirements.txt
       - save_cache:
           paths:
             - ./venv
