--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           working_directory: ~/repo
           command: |
             mkdir -p test-reports/flake8
-            flake8 . --output-file=test-reports/flake8/flake8.txt
+            poetry run flake8 . --output-file=test-reports/flake8/flake8.txt
       - run:
           name: "Check for warnings."
           command: |
@@ -46,23 +46,23 @@ jobs:
       - run:
           name: "Run tests"
           command: |
-            pytest -v --cov=calculator
-            flake8 --exclude=venv* --statistics
-            flake8 . --bug-report
-            flake8 . --benchmark
-            flake8 . --count
+            poetry run pytest -v --cov=calculator
+            poetry run flake8 --exclude=venv* --statistics
+            poetry run flake8 . --bug-report
+            poetry run flake8 . --benchmark
+            poetry run flake8 . --count
           when: always
       - run:
           name: "Run test2"
           working_directory: ~/repo
-          command: coverage run test_calculator.py test
+          command: poetry run coverage run test_calculator.py test
           when: always
       - run:
           name: "Create Test Reports"
           working_directory: ~/repo
           command: |
-            flake8_junit test-reports/flake8/flake8.txt test-reports/flake8/flake8_junit.xml
-            coverage html -d test-reports/coverage
+            poetry run flake8_junit test-reports/flake8/flake8.txt test-reports/flake8/flake8_junit.xml
+            poetry run coverage html -d test-reports/coverage
           when: always
       - store_test_results:
           path: test-reports
