--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,10 @@ jobs:
           - v1-dependencies-
       - run:
           name: "Install dependencies"
-          command: pip install --user -r requirements.txt
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
       - save_cache:
           paths:
             - ./venv
@@ -23,6 +26,7 @@ jobs:
           working_directory: ~/repo
           command: |
             mkdir -p test-reports/flake8
+            . venv/bin/activate
             flake8 . --output-file=test-reports/flake8/flake8.txt
       - run:
           name: "Check for warnings."
