--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           name: "Install dependencies"
           command: |
             python3 -m venv venv
-            . venv/bin/activate
+            . .venv/bin/activate
             pip install -r requirements.txt
       - save_cache:
           paths:
@@ -26,7 +26,7 @@ jobs:
           working_directory: ~/repo
           command: |
             mkdir -p test-reports/flake8
-            . venv/bin/activate
+            . .venv/bin/activate
             flake8 . --output-file=test-reports/flake8/flake8.txt
       - run:
           name: "Check for warnings."
