--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,7 @@ jobs:
       - run:
           name: "Run tests"
           command: |
+            . venv/bin/activate
             pytest -v --cov=calculator
             flake8 --exclude=venv* --statistics
             flake8 . --bug-report
@@ -64,6 +65,7 @@ jobs:
           name: "Create Test Reports"
           working_directory: ~/repo
           command: |
+            . venv/bin/activate
             flake8_junit test-reports/flake8/flake8.txt test-reports/flake8/flake8_junit.xml
             coverage html -d test-reports/coverage
           when: always
