--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
       - run:
           name: "Run tests"
           command: |
-            . .venv/bin/activate
+            . venv/bin/activate
             pytest -v --cov=calculator
             flake8 --exclude=venv* --statistics
             flake8 . --bug-report
@@ -59,13 +59,15 @@ jobs:
       - run:
           name: "Run test2"
           working_directory: ~/repo
-          command: coverage run test_calculator.py test
+          command: |
+            . venv/bin/activate
+            coverage run test_calculator.py test
           when: always
       - run:
           name: "Create Test Reports"
           working_directory: ~/repo
           command: |
-            . .venv/bin/activate
+            . venv/bin/activate
             flake8_junit test-reports/flake8/flake8.txt test-reports/flake8/flake8_junit.xml
             coverage html -d test-reports/coverage
           when: always
