--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ jobs:
       - run:
           name: "Install dependencies"
           command: |
-            python3 -m venv venv
-            . venv/bin/activate
+            # python3 -m venv venv
+            # . venv/bin/activate
             pip install -r requirements.txt
       - save_cache:
           paths:
@@ -49,7 +49,7 @@ jobs:
       - run:
           name: "Run tests"
           command: |
-            . venv/bin/activate
+            #. venv/bin/activate
             pytest -v --cov=calculator
             flake8 --exclude=venv* --statistics
             flake8 . --bug-report
@@ -67,7 +67,7 @@ jobs:
           name: "Create Test Reports"
           working_directory: ~/repo
           command: |
-            . venv/bin/activate
+            #. venv/bin/activate
             flake8_junit test-reports/flake8/flake8.txt test-reports/flake8/flake8_junit.xml
             coverage html -d test-reports/coverage
           when: always
