--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,7 @@ jobs:
           - v1-dependencies-
       - run:
           name: "Install dependencies"
-          command: |
-            # python3 -m venv venv
-            # . venv/bin/activate
-            pip install --user -r requirements.txt
+          command: pip install --user -r requirements.txt
       - save_cache:
           paths:
             - ./venv
@@ -49,8 +46,7 @@ jobs:
       - run:
           name: "Run tests"
           command: |
-            #. venv/bin/activate
-            pytest -v --cov=calculator
+            #pytest -v --cov=calculator
             flake8 --exclude=venv* --statistics
             flake8 . --bug-report
             flake8 . --benchmark
@@ -60,16 +56,14 @@ jobs:
           name: "Run test2"
           working_directory: ~/repo
           command: |
-            . venv/bin/activate
-            coverage run test_calculator.py test
+            #coverage run test_calculator.py test
           when: always
       - run:
           name: "Create Test Reports"
           working_directory: ~/repo
           command: |
-            #. venv/bin/activate
             flake8_junit test-reports/flake8/flake8.txt test-reports/flake8/flake8_junit.xml
-            coverage html -d test-reports/coverage
+            #coverage html -d test-reports/coverage
           when: always
       - store_test_results:
           path: test-reports
